sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: not found: value estPlusPetit
			if (estPlusPetit(k+1,k)) {
                            ^AlgBubbleSort1:9: error: not enough arguments for method echange: (x$1: Int, x$2: Int)Unit.
Unspecified value parameters x$1, x$2.
			echange()
                               ^