sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var n=getNombreValeurs()
	var a:Int=1;
	while (a!=0) {
		a=0;
		for (k <- 0 to n-2) {
			if (estPlusPetit(k+1,k)) {
			echange()
			a=a+1;
			}
		}
	}
}
